package com.elitespectra;

public interface DanceImpl {

    void spin();
    void doTheCaterpillar();
    void jump();
    
}
